<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.movieapp.cwe.movieapp.MovieAddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_name_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name" />

                <EditText
                    android:id="@+id/movie_name_edit"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/movie_year_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_year" />

                <EditText
                    android:id="@+id/movie_year_edit"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/movie_fiction_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/fiction" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:entries="@array/fiction_array"
                    android:id="@+id/fiction_spinner" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/movie_genre_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:id="@+id/genre_spinner" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/movie_score_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_score" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:entries="@array/score_array"
                    android:id="@+id/score_spinner" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/movie_cast_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_cast" />

                <EditText
                    android:id="@+id/movie_cast_edit"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add"
                    android:id="@+id/addButton" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                    <ListView
                        android:id="@+id/cast_list"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
